auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: auth_service:latest
        imagePullPolicy: Never
        command: ["/bin/sh", "-c"]
        args: ["cd /app && python manage.py migrate && DJANGO_SETTINGS_MODULE=auth_service.settings python manage.py runserver 0.0.0.0:9000"]
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
  - port: 9000
    targetPort: 9000
