posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
      - name: posts-service
        image: posts_service:latest
        imagePullPolicy: Never
        command: ["/bin/sh", "-c"]
        args: ["python manage.py migrate && python manage.py runserver 0.0.0.0:9001"]
        ports:
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts-service
  ports:
  - port: 9001
    targetPort: 9001
