users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
      - name: users-service
        image: users_service:latest
        imagePullPolicy: Never
        command: ["/bin/sh", "-c"]
        args: ["python manage.py migrate && python manage.py runserver 0.0.0.0:9002"]
        ports:
        - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users-service
  ports:
  - port: 9002
    targetPort: 9002
