ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 9000
      - path: /users(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 9002
      - path: /posts(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: posts-service
            port:
              number: 9001
